fix z-index-problem

--- a/style.css
+++ b/style.css
@@ -218,11 +218,13 @@ table {
     margin-right: 50px;
     height: 100%;
     width: 100%;
+    z-index: -100;
 }
 #form{
     margin-top: 80px;
     margin-left: 38%;
     min-width: 60%
+    z-index: 100;
 }
 #controlPanel{
     position: fixed;
